# mnemolith

./: .env.example  docker-compose.yml  pyproject.toml
src/mnemolith/: config.py  graphiti_store.py  main.py  mcp_server.py
