[project]
name = "mnemolith"
version = "2.0.0"
description = "Semantic search over an Obsidian vault using RAG, Qdrant, and MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0",
    "openai>=1.0,<2.0",
    "python-dotenv>=1.0",
    "qdrant-client>=1.9",
    "pyyaml>=6.0",
    "tqdm>=4.0",
    "psycopg[binary,pool]>=3.1",
    "fastembed>=0.4",
    "graphiti-core[anthropic]>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mnemolith = "mnemolith.main:main"
mnemolith-mcp = "mnemolith.mcp_server:main"

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring a running Qdrant instance",
    "pg_integration: tests requiring a running PostgreSQL instance",
    "pgvector_integration: tests requiring PostgreSQL with pgvector extension",
    "graphiti_integration: tests requiring a running Neo4j + Graphiti setup",
]

[tool.coverage.run]
source = ["mnemolith"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle + pyflakes
    "I",             # import sorting
    "UP",            # pyupgrade: modernize syntax for Python 3.13
    "A",             # builtin shadowing
    "C4",            # comprehension style
    "ISC",           # implicit string concatenation bugs
    "LOG",           # logging best practices
    "SIM",           # simplification suggestions
    "RUF",           # ruff-specific rules
]
ignore = [
    "SIM102",        # "use single if" — too aggressive with guard clauses
    "SIM105",        # "use contextlib.suppress" — loses readability
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "ruff>=0.15.7",
]
